# larflow

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  GNUmakefile  README.md  build.sh  build_larcv1.sh  clean.sh  compile_on_tuftsgrid.sh  configure.sh  configure_larcv1.sh  first_build.sh  first_setup.sh  genindex.html  goto_head_of_submodules.sh  index.html  objects.inv  search.html  searchindex.js  start_tufts_container.sh  submit_compilation_to_grid.sh
ana/: README.md  (+1 more)
cilantro/: CMakeLists.txt
cilantro/examples/: connected_component_segmentation.cpp  flat_convex_hull.cpp
docs/: CMakeLists.txt  Doxyfile  conf.py  index.rst
larflow/: CMakeLists.txt
larflow/Ana/: #treeMakerScript.cxx#  .gitignore  CRTDataPrep  CRTDataPrep.cxx  CRTana  CRTana.cxx  CRTprep.cxx  CRTprep_old.cxx  CRTvoxelHits.py  GNUmakefile  README.md  dedx_larmatch_from_true_tracks.cxx  dumbcrap.cxx  keypoint_truthana.cxx  kpsreco_vertexana.cxx  prepData  prepData.cxx  treeMakerScript  treeMakerScript.cxx
larflow/CRTMatch/: CMakeLists.txt  CRTHitMatch.cxx  CRTHitMatch.h  CRTMatch.cxx  CRTMatch.h  CRTMatchManager.cxx  CRTMatchManager.h  CRTTrackMatch.cxx  CRTTrackMatch.h  CRTTruthMatchManager.cxx  CRTTruthMatchManager.h  LinkDef.h  README.md
larflow/CRTMatch/test/: README.md  plot_crt.py  plot_crt_match.py  plot_crthit_match.py  plot_crtmatch.py  plot_crttrack_match.py  run_crthit_match.py  run_crtmatch.py  run_crtmatchmanager.py  run_crttrack_match.py  vis_cmm.py
larflow/CosmicRemovalSuite/: CMakeLists.txt  CRSuiteFunctions.cxx  CRSuiteFunctions.h  CRVarsMaker.cxx  CRVarsMaker.h  LinkDef.h  cosmic_bdt_v2.py  cosmictag_bnbBDTweights_test.pickle  cosmictag_nueBDTweights_test.pickle  crvarsarch.cxx  crvarsarch.h
larflow/CosmicRemovalSuite/test/: run_crvarsmaker.py  run_reco_scaffold.py
larflow/DETR/: CMakeLists.txt  LinkDef.h  PrepDETR2D.cxx  PrepDETR2D.h
larflow/DETR/test/: inspect_detr2d_data.ipynb  run_prepdetr2d.py
larflow/FlowContourMatch/: CMakeLists.txt  ContourFlowMatch.cxx  ContourFlowMatch.h  FlowContourMatch.cxx  FlowContourMatch.h  LinkDef.h  README.md  makecontourflowmatches.cxx  makecontourflowmatches.h  makehitsfrompixels.cxx  makehitsfrompixels.h  makesimpleflowhits.cxx  makesimpleflowhits.h
larflow/FlowContourMatch/test/: GNUmakefile  sparseflow2hits.cxx
larflow/KeyPoints/: CMakeLists.txt  KPdata.cxx  KPdata.h  KeypointData.cxx  KeypointData.h  LinkDef.h  LoaderAffinityField.cxx  LoaderAffinityField.h  LoaderKeypointData.cxx  LoaderKeypointData.h  PrepAffinityField.cxx  PrepAffinityField.h  PrepKeypointData.cxx  PrepKeypointData.h  README.md
larflow/KeyPoints/arxiv/: bvhnode_t.cxx  bvhnode_t.h
larflow/KeyPoints/test/: CMakeLists.txt  README.md  run_prepaffinityfielddata.py  run_prepalldata.py  run_prepkeypointdata.py  unittest.cxx  view_tripletfile_data.ipynb  vis_affinityfield.py  vis_keypointlabels.py  vis_matchtriplet_data.ipynb
larflow/LArFlowConstants/: CMakeLists.txt  LArFlowConstants.cxx  LArFlowConstants.h  LinkDef.h
larflow/LightModel/: CMakeLists.txt  DataLoader.cxx  DataLoader.h  LinkDef.h
larflow/LightModel/net/: Untitled.ipynb  Untitled1.ipynb  lightmodelnet.py  lm_dataloader.py  test_101921.txt  test_101921_1022.txt  test_net.py  test_with_dataloading.py  train.py
larflow/LightModel/test/: run_dataloader.py  visvoxels.py  visvoxels_batch.py
larflow/MCTools/: CMakeLists.txt  LinkDef.h  ShowerLikelihoodBuilder.cxx  ShowerLikelihoodBuilder.h  ShowerTruthRecoAna.cxx  ShowerTruthRecoAna.h  TrackTruthRecoAna.cxx  TrackTruthRecoAna.h
larflow/MaskRCNNreco/: CMakeLists.txt  LinkDef.h  MaskRCNNreco.cxx  MaskRCNNreco.h
larflow/PrepFlowMatchData/: CMakeLists.txt  FlowMatchHitMaker.cxx  FlowMatchHitMaker.h  FlowMatchMap.cxx  FlowMatchMap.hh  FlowTriples.cxx  FlowTriples.h  InstanceDataLoader.cxx  InstanceDataLoader.h  LinkDef.h  MatchTripletProcessor.cxx  MatchTripletProcessor.h  MatchTriplets.cxx  MatchTriplets.h  PrepFlowMatchData.cxx  PrepFlowMatchData.hh  PrepMatchTriplets.cxx  PrepMatchTriplets.h  PrepSSNetTriplet.cxx  PrepSSNetTriplet.h  PyFlowMatchData.cxx  PyFlowMatchData.hh  SSNetLabelData.cxx  SSNetLabelData.h  TripletTruthFixer.cxx  TripletTruthFixer.h  TripletTruthFromSimCh.cxx  TripletTruthFromSimCh.h  WireOverlap.cxx  WireOverlap.h
larflow/Reco/: CMakeLists.txt  CRTMatch.cxx  CRTMatch.h  ChooseMaxLArFlowHit.cxx  ChooseMaxLArFlowHit.h  ClusterBookKeeper.cxx  ClusterBookKeeper.h  ClusterImageMask.cxx  ClusterImageMask.h  CosmicProtonFinder.cxx  CosmicProtonFinder.h  CosmicTrackBuilder.cxx  CosmicTrackBuilder.h  CosmicVertexBuilder.cxx  CosmicVertexBuilder.h  DBScanLArMatchHits.cxx  DBScanLArMatchHits.h  EventKeypointReco.cxx  EventKeypointReco.h  FilterByWCTagger.cxx  FilterByWCTagger.h  KPCluster.cxx  KPCluster.h  KPSRecoManager.cxx  KPSRecoManager.h  KPTrackFit.cxx  KPTrackFit.h  KeypointFilterByClusterSize.cxx  KeypointFilterByClusterSize.h  KeypointFilterByWCTagger.cxx  KeypointFilterByWCTagger.h  KeypointReco.cxx  KeypointReco.h  LikelihoodProtonMuon.cxx  LikelihoodProtonMuon.h  LinkDef.h  MCPixelPGraph.cxx  MCPixelPGraph.h  NuSel1e1pEventSelection.cxx  NuSel1e1pEventSelection.h  (+103 more)
larflow/SCBoundary/: CMakeLists.txt  LinkDef.h  SCBoundary.cxx  SCBoundary.h  SCBs_values.cxx
larflow/SpatialEmbed/: CMakeCache.txt  CMakeLists.txt  CentroidNet.py  CodeTest.py  LinkDef.h  Prep3DSpatialEmbed.cxx  Prep3DSpatialEmbed.h  PrepMatchEmbed.cxx  PrepMatchEmbed.h  PrepProngEmbed.cxx  PrepProngEmbed.h  PrepSpatialEmbed.cxx  PrepSpatialEmbed.h  SpatialEmbed.py  SpatialEmbed3DNetProducts.cxx  SpatialEmbed3DNetProducts.h  SpatialEmbedData.cxx  SpatialEmbedData.h  SpatialEmbedVisualization.py  evalMetric.py  evalSpatialEmbed.py  particle_list.py  plot_tripletfile_data.ipynb  prepspatialembeddata.py  processEvaluations.py  questionsforT.txt  readTree.py  tempscript  testclass.cxx  testclass.h  testlovasz.py  testoutput  train_SpatialEmbed_net.py
larflow/Voxelizer/: CMakeLists.txt  LArVoxelHitMaker.cxx  LArVoxelHitMaker.h  LinkDef.h  README.md  TPCVoxelData.cxx  TPCVoxelData.h  VoxelizePool.cxx  VoxelizePool.h  VoxelizeTriplets.cxx  VoxelizeTriplets.h
(+4019 files in other folders)
