
add_subdirectory(LArFlowConstants)
add_subdirectory(Reco)
add_subdirectory(PrepFlowMatchData)
add_subdirectory(MCTools)
add_subdirectory(SCBoundary)
add_subdirectory(Voxelizer)
#add_subdirectory(FlowContourMatch)
add_subdirectory(CRTMatch)
add_subdirectory(MaskRCNNreco)
add_subdirectory(KeyPoints)
add_subdirectory(SpatialEmbed)
add_subdirectory(CosmicRemovalSuite)
